fixed bug; hint visibility is set back to false when user initiates move

--- a/src/components/TacticBoard.css
+++ b/src/components/TacticBoard.css
@@ -12,7 +12,7 @@
   padding: 5px;
   margin: 20px;
   margin-bottom: 0;
-  width: 100px;
+  width: 120px;
   text-align: center;
   cursor: pointer;
   font-weight: bold;
